# lsp-bridge-repro

./: example.py  lsp-bridge-buffer-debug-fails.txt  lsp-bridge-buffer-debug-succeeds.txt  pyproject.toml
emacs-dir/: init.el
