[project]
name = "lsp-bridge-repro"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.29.5",
    "epc>=0.0.5",
    "orjson>=3.10.18",
    "packaging>=25.0",
    "paramiko>=3.5.1",
    "rapidfuzz>=3.13.0",
    "ruff>=0.12.2",
    "setuptools>=80.9.0",
    "sexpdata>=1.0.2",
    "six>=1.17.0",
    "watchdog>=6.0.0",
]
